--- a/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
@@ -1,9 +1,7 @@
 datasets
-whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/ --pre
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@2025.1.0.0#subdirectory=tools/who_what_benchmark
 numpy>=1.23.5,<2
-openvino==2025.1.0.*
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
+openvino==2025.1
 optimum-intel>=1.22.0
 transformers>=4.48.0
 onnx==1.17.0
