--- a/examples/llm_compression/torch/qat_with_lora/requirements.txt
+++ b/examples/llm_compression/torch/qat_with_lora/requirements.txt
@@ -1,9 +1,7 @@
 tensorboard==2.13.0
 torch==2.6.0
-whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/ --pre
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@2025.1.0.0#subdirectory=tools/who_what_benchmark
 numpy>=1.23.5,<2
 openvino==2025.1.0.*
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 optimum-intel>=1.22.0
 transformers>=4.48.0
