--- a/examples/post_training_quantization/onnx/yolov8_quantize_with_accuracy_control/requirements.txt
+++ b/examples/post_training_quantization/onnx/yolov8_quantize_with_accuracy_control/requirements.txt
@@ -1,5 +1,4 @@
 ultralytics==8.3.22
 onnx==1.17.0
 onnxruntime==1.19.2
-openvino==2025.1.0.*
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
+openvino==2025.1
