--- a/examples/post_training_quantization/openvino/anomaly_stfpm_quantize_with_accuracy_control/requirements.txt
+++ b/examples/post_training_quantization/openvino/anomaly_stfpm_quantize_with_accuracy_control/requirements.txt
@@ -1,5 +1,4 @@
 anomalib==0.6.0
-openvino==2025.1.0.*
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
+openvino==2025.1
 setuptools<=72.1.0
 numpy<2
