--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -9,7 +9,7 @@ on:
         description: 'The pull request number'
         default: ''
   pull_request:
-  
+
 jobs:
   precommit-common:
     runs-on: macos-14
@@ -57,6 +57,7 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run pre-commit
-        run: pytest -n 3 -ra tests/openvino --dist loadscope
+        # run: pytest -n 3 -ra tests/openvino --dist loadscope
+        run: pytest -ra tests/openvino
         env:
           ONEDNN_MAX_CPU_ISA: AVX2
